--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -22,6 +22,16 @@
     "SignIn": "Registrarse",
     "ToLogin": "¿Ya tienes una cuenta?",
     "ToRegister": "¿Aún no tienes una cuenta?"
+  },
+  "Profile": {
+    "Profile": "Perfil",
+    "DentalCenter": "Centro Dental",
+    "EditProfile": "Editar perfil",
+    "gInformation": "Información general",
+    "Name": "Nombre",
+    "Email": "Correo",
+    "Settings": "Configuración",
+    "egInformation": "Editar información general",
+    "cPassword": "Cambiar contraseña"
   }
-
 }
