Add int to support component

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,5 +22,18 @@
     "SignIn":"Sign In",
     "ToLogin": "Already have an account?",
     "ToRegister": "Don't have an account yet?"
+  },
+  "Support": {
+    "Title": "Support",
+    "FormTitle": "Request Form",
+    "Name": "Name",
+    "NamePlaceholder": "Enter your name",
+    "Email": "Email",
+    "EmailPlaceholder": "Enter your email",
+    "Issue": "What is the issue?",
+    "IssuePlaceholder": "Describe the issue",
+    "AdditionalDetails": "Additional details",
+    "DetailsPlaceholder": "Additional details",
+    "SubmitButton": "Submit"
   }
 }
