--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -22,6 +22,18 @@
     "SignIn": "Registrarse",
     "ToLogin": "¿Ya tienes una cuenta?",
     "ToRegister": "¿Aún no tienes una cuenta?"
+  },
+  "Support": {
+    "Title": "Soporte",
+    "FormTitle": "Formulario de Solicitud",
+    "Name": "Nombre",
+    "NamePlaceholder": "Escriba su nombre",
+    "Email": "Correo",
+    "EmailPlaceholder": "Escriba su correo",
+    "Issue": "¿Cuál es el problema?",
+    "IssuePlaceholder": "Describa el problema",
+    "AdditionalDetails": "Detalles adicionales",
+    "DetailsPlaceholder": "Detalles adicionales",
+    "SubmitButton": "Enviar"
   }
-
 }
