--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,5 +22,24 @@
     "SignIn":"Sign In",
     "ToLogin": "Already have an account?",
     "ToRegister": "Don't have an account yet?"
+  },
+  "Reservation": {
+    "Tittle": "Appointment Booking",
+    "SubTittle": "Appointment Record",
+    "Name": "Patient's name",
+    "LastName": "Patient's last name",
+    "DNI": "DNI",
+    "Date": "Date",
+    "Time": "Time",
+    "Appointment": "Type of appointment",
+    "Dentist": "Name of the dentist",
+    "Duration": "Duration",
+    "namePlaceholder": "Enter your name",
+    "lastNamePlaceholder": "Enter your last name",
+    "dniPlaceholder": "Enter the DNI",
+    "appointmentPlaceholder": "Select the type of appointment",
+    "dentistPlaceholder": "Select the name",
+    "durationPlaceholder": "Enter the estimated duration",
+    "reserveLabel": "Reserve appointment"
   }
 }
