added Patients component, model and service connected on the FakeAPI, Updated db.json

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -65,5 +65,11 @@
     "Settings": "Settings",
     "egInformation": "Edit general information",
     "cPassword": "Change password"
+  },
+  "Patients": {
+    "Personal_doc": "Personal doc",
+    "Misc_doc": "Misc doc",
+    "header": "Clinical Records",
+    "button": "New Patient"
   }
 }
