fix styles components

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -56,6 +56,7 @@
     "reserveLabel": "Reserve appointment"
   },
   "Profile": {
+    "Profile": "Profile",
     "DentalCenter": "Dental Center",
     "EditProfile": "Edit profile",
     "gInformation": "General information",
@@ -72,8 +73,7 @@
     "ccPassword": "Confirm new password",
     "ecPassword": "enter your current password",
     "enPassword": "enter your new password",
-    "rnPassword": "repeat your new password",
-    "cPassword": "Change password"
+    "rnPassword": "repeat your new password"
   },
   "Patients": {
     "Personal_doc": "Personal doc",
