--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -56,6 +56,7 @@
     "reserveLabel": "Reservar cita"
   },
   "Profile": {
+    "Profile": "Perfil",
     "DentalCenter": "Centro Dental",
     "EditProfile": "Editar perfil",
     "gInformation": "Información general",
@@ -72,8 +73,8 @@
     "ccPassword": "Confirma contraseña nueva",
     "ecPassword": "ingresa tu actual contraseña",
     "enPassword": "ingresa tu nueva contraseña",
-    "rnPassword": "repite tu nueva contraseña",
-    "cPassword": "Cambiar contraseña"
+    "rnPassword": "repite tu nueva contraseña"
+
   },
   "Patients": {
     "Personal_doc": "Ficha Personal",
