--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -81,5 +81,27 @@
     "header": "Clinical Records",
     "button": "New Patient"
 
+  },
+  "Specialists": {
+    "sSpecialists": "Specialists",
+    "nSpecialist": "New Specialist",
+    "pProfile": "Personal profile",
+    "aHours": "Available hours",
+    "delete": "Delete",
+    "fName": "First name",
+    "lName": "Last name",
+    "specialty": "Specialty",
+    "id": "ID",
+    "email": "Email",
+    "experience": "Experience",
+    "phone": "Phone",
+    "save": "Save",
+    "cancel": "Cancel",
+    "date": "Date",
+    "hour": "Hour",
+    "add": "Add",
+    "raHours": "Registered available hours",
+    "ok": "OK",
+    "cDelete": "Are you sure you want to remove"
   }
 }
