--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -105,5 +105,10 @@
     "ok": "OK",
     "cDelete": " Are you sure you want to remove Dr.",
     "days": "Monday | Tuesday | Wednesday | Thursday | Friday | Saturday | Sunday"
+  },
+  "Metrics": {
+    "header": "Metrics",
+    "dropdown": "Choose type of metrics",
+    "button": "Generate metrics"
   }
 }
