create component reports

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -105,5 +105,14 @@
     "ok": "OK",
     "cDelete": "¿Estas seguro de eliminar a Dr.",
     "days": "Lunes | Martes | Miércoles | Jueves | Viernes | Sábado | Domingo"
-  }
+  },
+  "Reports": {
+  "header": "Informes",
+  "dropdown": "Elegir tipo de informes",
+  "date": "Dia",
+  "from": "De",
+  "to": "a",
+  "close": "Cerrar informe",
+  "button": "Generar informe"
+}
 }
